# platform.upstream.gsignond-plugin-oauth

./: Makefile.am  Makefile.in  configure  configure.ac  project.config
docs/: Makefile.am  Makefile.in  gsignond-plugin-oauth-docs.sgml  gsignond-plugin-oauth-sections.txt  gsignond-plugin-oauth.types
docs/html/: GSignondOauthPlugin.html  api-index-full.html  ch01.html  deprecated-api-index.html  gsignond-plugin-oauth.devhelp2  index.html  index.sgml  object-tree.html
examples/: Makefile.am  Makefile.in  gsignond-oauth1-example.c  gsignond-oauth2-example.c
packaging/: gsignond-plugin-oauth.changes  gsignond-plugin-oauth.spec
src/: Makefile.am  Makefile.in  gsignond-oauth-plugin-oauth1.c  gsignond-oauth-plugin-oauth1.h  gsignond-oauth-plugin-oauth2.c  gsignond-oauth-plugin-oauth2.h  gsignond-oauth-plugin-utils.c  gsignond-oauth-plugin-utils.h  gsignond-oauth-plugin.c  gsignond-oauth-plugin.h
test/: Makefile.am  Makefile.in  cacert.pem.template  oauth1tests.c  oauth2tests.c  oauthplugintest.c  privkey.pem.template  valgrind.supp
